@@ -8,17 +8,16 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
+import com.crawljax.core.CrawljaxException;
 import org.eclipse.jetty.util.resource.Resource;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
-import com.crawljax.core.CrawljaxException;
-
 public class WebServerTest {
-	private URL site;
+	private URI site;
 	private WebServer server;
 
 	private static final int MAX_PORT = 65535;
@@ -26,7 +25,7 @@ public class WebServerTest {
 
 	@Before
 	public void setup() throws Exception {
-		site = BaseCrawler.class.getResource("/site");
+		site = BaseCrawler.class.getResource("/site").toURI();
 		try {
 			server = new WebServer(Resource.newResource(site));
 		} catch (IOException e) {
@@ -42,7 +41,7 @@ public class WebServerTest {
 
 	@Test
 	public void testSiteUrl() throws Exception {
-		site = new URL("http", "localhost", server.getPort(), "/");
+		site = URI.create("http://localhost:" + server.getPort());
 		assertEquals(site.getPort(), server.getSiteUrl().getPort());
 		assertTrue(site.getPath().equals(server.getSiteUrl().getPath()));
 	}
